portainer/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: portainer
  namespace: portainer
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web

spec:
  rules:
    - host: portainer.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: portainer
                port:
                  number: 9000
